--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,40 +5,34 @@
 body {
   margin: auto;
   background-color: transparent;
-
 }
 
 .hoverText:hover {
-/*tailwind: text-amber-500*/
+  /*tailwind: text-amber-500*/
   /* color: #f59e0b; */
-  color:rgb(242, 117, 72);
+  color: rgb(242, 117, 72);
 }
 
 .scroll-menu-wrapper {
   display: flex;
   overflow-x: auto; /* Permitir desplazamiento horizontal */
   padding: 1rem; /* Espaciado interno */
-
 }
-
+/**********/
 .scroll-menu-wrapper::-webkit-scrollbar {
   height: 0.75rem; /* Altura de la barra de desplazamiento */
 }
 
 .scroll-menu-wrapper::-webkit-scrollbar-thumb {
   border-radius: 0.25rem;
-  background: #D97706; /* Color del pulgar de la barra de desplazamiento */
-width:8px;
+  background: #d97706; /* Color del pulgar de la barra de desplazamiento */
+  width: 8px;
 }
 
 .scroll-menu-wrapper::-webkit-scrollbar-track {
   background: #374151; /* Color de fondo de la pista */
-  background: #4B5563; /* Color de fondo de la pista */
+  background: #4b5563; /* Color de fondo de la pista */
 }
-
-
-
-
 
 /*sm: 640px
 md: 768px
