--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,8 @@ body {
 
 .scroll-menu-wrapper {
   display: flex;
-  overflow-x: auto; /* Permitir desplazamiento horizontal */
-  padding: 1rem; /* Espaciado interno */
+  overflow-x: auto; 
+  padding: 1rem; 
 }
 /**********/
 .scroll-menu-wrapper::-webkit-scrollbar {
@@ -36,7 +36,9 @@ body {
   background: #4b5563; /* Color de fondo de la pista */
 }
 
-/*sm: 640px
+/*
+breakpoint reminder
+sm: 640px
 md: 768px
 lg: 1024px
 xl: 1280px
